# mitscript

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  build_tests.sh  run_a1_tests.sh  run_a2_tests.sh  run_a3_tests.sh  run_a4_mem_tests.sh  run_a4_tests.sh  run_a5_tests.sh  run_derby_benchmark.sh  run_full_test_suite.sh
gc/: CMakeLists.txt  gc.h  main.cpp
interpreter/: AST.cpp  AST.h  CMakeLists.txt  MITScript.g  Makefile  PrettyPrinter.h  Visitor.h  interpreter.cpp  parse-tree-old.cpp  parser-old.cpp  parser.cpp  parser.h  parser_v1.cpp
interpreter/interpreter_src/: cast.cpp  data_functions.cpp  debug.h  exceptions.h  expression.cpp  frame.h  interpreter.h  native_functions.cpp  native_functions.h  statement.cpp  value.h
interpreter/parser_src/: Arithmetic.cpp  Boolean.cpp  CST.cpp  CST.h  ControlFlow.cpp  Expressions.cpp  TreeConverter.cpp  nonterminals.h
interpreter/src/: Arithmetic.cpp  Boolean.cpp  CST.cpp  CST.h  ControlFlow.cpp  Expressions.cpp  TreeConverter.cpp  nonterminals.h
tests/a1/: run-tests.sh
tests/a1/for_testing/: bad1.mit  bad10.mit  bad11.mit  bad12.mit  bad13.mit  bad14.mit  bad15.mit  bad16.mit  bad2.mit  bad3.mit  bad4.mit  bad5.mit  bad6.mit  bad7.mit  bad8.mit  bad9.mit  good1.mit  good2.mit  good3.mit  good4.mit  good5.mit  good6.mit  good7.mit
tests/a1/personal/: arithmetic1  arithmetic3  boolean1  function1  test3.mit  test4.mit  test6.mit
tests/a1/personal_joseph/: test1.mit  test10.mit  test11.mit  test2.mit  test3.mit  test4.mit  test5.mit  test6.mit  test7.mit  test8.mit  test9.mit
tests/a1/personal_rom/: test1.mit  test10.mit  test2.mit  test3.mit  test4.mit  test6.mit  test7.mit  test8.mit  test9.mit
tests/a1/personal_yajvan/: test7.mit
tests/a2/: others-test-outputs.sh  personal-test-outputs.sh  run-tests.sh
tests/a2/joe/: bad01.mit  bad02.mit  bad03.mit  bad04.mit  bad05.mit  bad06.mit  good01.mit  good02.mit  good03.mit  good04.mit  good05.mit.out  good06.mit  good07.mit.out  good08.mit  good09.mit  good09.mit.out  good10.mit  good10.mit.out  good11.mit.out  good12.mit  good12.mit.out  good13.mit  good13.mit.out
tests/a2/others/: good01.mit.out  good04.mit  good04.mit.out  good10.mit.out
tests/a2/personal/: test1.mit  test1.mit.out  test10.mit  test10.mit.out  test2.mit.out  test3.mit  test3.mit.out  test4.mit  test4.mit.out  test5.mit  test5.mit.out  test6.mit  test6.mit.out  test7.mit  test8.mit  test8.mit.out  test9.mit  test9.mit.out
tests/a2/personal_joseph/: test10.mit  test10.out  test11.mit  test12.mit  test12.out  test14.mit  test14.out  test4.out  test5.mit  test6.out  test7.mit  test8.out
tests/a2/personal_rom/: test10.mit  test2.mit  test3.out  test4.mit  test4.out  test5.mit  test5.out  test7.mit
tests/a2/personal_yajvan/: test10.mit  test2.mit  test3.mit  test4.out  test5.out  test6.mit  test6.out  test7.out  test9.mit
tests/a2/public/: good06.mit  good07.mit  good09.mit  good11.mit  good12.mit
tests/a2/rom/: good01.mit  good02.mit  good02.mit.out  good03.mit  good06.mit  good06.mit.out  good07.mit.out  good08.mit  good09.mit  good09.mit.out
tests/a3/: run-tests-bytecode-interpreter.sh
tests/a3/personal/: test1.mit  test1.out  test10.mit  test10.out  test2.mit  test2.out  test3.mit  test3.out  test4.mit  test4.out  test5.mit  test5.out  test6.mit  test6.out  test7.mit  test7.out  test8.mit  test8.out  test9.mit  test9.out
tests/a3/personal_mitbc/: bad0-jumpOutOfRange.mitbc
tests/a4/: run-tests.sh
tests/a4/personal/: test1.mit  test10.mit  test2.mit  test3.mit  test4.mit  test5.mit  test6.mit  test7.mit  (+2 more)
vm/: CMakeLists.txt
vm/bc-parser/: CMakeLists.txt  bc-lexer.lex  prettyprinter.h  utils.cpp  utils.h
vm/src/: bytecode-compiler.cpp  bytecode-interpreter.cpp  interpreter.cpp  interpreter.h
vm/src/bytecode/: debug.h  exceptions.h  frame.cpp  frame.h  instructions.h  native_functions.h  types.cpp  types.h
vm/src/compiler/: compiler.cpp  compiler.h  symbol_table.h
(+19 files in other folders)
